k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: workpro-backend
  ports:
    - port: 5010
      targetPort: 5010
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: workpro-frontend
  ports:
    - port: 80
      targetPort: 80
